--- a/css/style.css
+++ b/css/style.css
@@ -569,6 +569,57 @@ nav .wrapper .burger .hide {
           transform: translateY(0);
   opacity: 1;
 }
+.sectionoffer .accordionbox {
+  width: 100%;
+  height: 70%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.sectionoffer .accordionbox .accordion {
+  margin-bottom: 0.4em;
+}
+.sectionoffer .accordionbox .accordion .accordionhead {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 1em;
+  border: 0.04em solid var(--color-mediumone);
+  cursor: pointer;
+  -webkit-transition: background-color 0.3s ease-in-out;
+  transition: background-color 0.3s ease-in-out;
+}
+.sectionoffer .accordionbox .accordion .accordionhead:hover {
+  background-color: var(--color-mediumone);
+}
+.sectionoffer .accordionbox .accordion .accordionhead__heading {
+  font-size: 2.6rem;
+  font-weight: 400;
+  -webkit-transition: color 0.3s ease-in-out;
+  transition: color 0.3s ease-in-out;
+}
+.sectionoffer .accordionbox .accordion .accordionhead .accordionarrow {
+  font-size: 2.6rem;
+  color: var(--color-mediumone);
+  -webkit-transition: color 0.3s ease-in-out;
+  transition: color 0.3s ease-in-out;
+}
+.sectionoffer .accordionbox .accordion .accordionhead:hover .accordionhead__heading {
+  color: var(--color-white);
+}
+.sectionoffer .accordionbox .accordion .accordionhead:hover .accordionarrow {
+  color: var(--color-white);
+}
 
 @media (max-width: 576px) {
   nav .wrapper {
