--- a/css/style.css
+++ b/css/style.css
@@ -537,7 +537,7 @@ nav .wrapper .burger .hide {
 .sectionoffer .boxheading {
   width: 100%;
   height: 10%;
-  margin-bottom: 3em;
+  margin-bottom: 0.8em;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -593,7 +593,7 @@ nav .wrapper .burger .hide {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 1em;
+  padding: 0.4em;
   border: 0.04em solid var(--color-mediumone);
   cursor: pointer;
   -webkit-transition: background-color 0.3s ease-in-out;
@@ -603,13 +603,13 @@ nav .wrapper .burger .hide {
   background-color: var(--color-mediumone);
 }
 .sectionoffer .accordionbox .accordion .accordionhead__heading {
-  font-size: 2.6rem;
+  font-size: 2rem;
   font-weight: 400;
   -webkit-transition: color 0.3s ease-in-out;
   transition: color 0.3s ease-in-out;
 }
 .sectionoffer .accordionbox .accordion .accordionhead .accordionarrow {
-  font-size: 2.6rem;
+  font-size: 2rem;
   color: var(--color-mediumone);
   -webkit-transition: color 0.3s ease-in-out;
   transition: color 0.3s ease-in-out;
@@ -619,6 +619,10 @@ nav .wrapper .burger .hide {
 }
 .sectionoffer .accordionbox .accordion .accordionhead:hover .accordionarrow {
   color: var(--color-white);
+}
+.sectionoffer .accordionbox .accordion .accordionhead .arrowaction {
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
 }
 .sectionoffer .accordionbox .accordion .accordioninfo {
   display: none;
