--- a/css/style.css
+++ b/css/style.css
@@ -571,7 +571,7 @@ nav .wrapper .burger .hide {
 }
 .sectionoffer .accordionbox {
   width: 100%;
-  height: 70%;
+  height: 60%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -651,6 +651,45 @@ nav .wrapper .burger .hide {
   color: var(--color-white);
   -webkit-transform: rotate(180deg);
           transform: rotate(180deg);
+}
+.sectionoffer .infooffer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  height: 25%;
+}
+.sectionoffer .infooffer__img {
+  height: 60%;
+  opacity: 0;
+  -webkit-transform: translateY(100%);
+          transform: translateY(100%);
+  -webkit-transition: opacity 1.2s ease-in-out, -webkit-transform 0.5s ease-in-out;
+  transition: opacity 1.2s ease-in-out, -webkit-transform 0.5s ease-in-out;
+  transition: transform 0.5s ease-in-out, opacity 1.2s ease-in-out;
+  transition: transform 0.5s ease-in-out, opacity 1.2s ease-in-out, -webkit-transform 0.5s ease-in-out;
+}
+.sectionoffer .infooffer__img img {
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.sectionoffer .infooffer .actioninfooffer {
+  opacity: 1;
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+}
+.sectionoffer .infooffer__text {
+  text-align: center;
 }
 
 @media (max-width: 576px) {
