added styles for section teams

--- a/css/style.css
+++ b/css/style.css
@@ -684,6 +684,124 @@ nav .wrapper .burger .hide {
   text-align: center;
 }
 
+.teams {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.teams .heading {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 2em;
+}
+.teams .heading h1 {
+  font-size: 4rem;
+  text-align: left;
+}
+.teams .heading .line {
+  -ms-flex-item-align: start;
+      align-self: flex-start;
+}
+.teams .teams {
+  width: 80%;
+  height: 70%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-transform: scale(1);
+          transform: scale(1);
+  -webkit-transition: -webkit-transform 0.5s ease-in-out;
+  transition: -webkit-transform 0.5s ease-in-out;
+  transition: transform 0.5s ease-in-out;
+  transition: transform 0.5s ease-in-out, -webkit-transform 0.5s ease-in-out;
+}
+.teams .teams__img {
+  height: 80%;
+  margin-bottom: 0.4em;
+}
+.teams .teams__img img {
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.teams .teams__info {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin: 1em 0em;
+  width: 85%;
+}
+.teams .teams__info i {
+  position: absolute;
+  top: -12%;
+  left: 0;
+  font-size: 14rem;
+  color: var(--color-mediumone);
+}
+.teams .teams__info p {
+  width: 60%;
+  margin-left: 10em;
+}
+.teams .teams__info--text {
+  font-style: italic;
+  margin-bottom: 0.4em;
+}
+.teams .teams__info .signature {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: end;
+  text-align: end;
+  margin-bottom: 0.8em;
+}
+.teams .teams .btnteams {
+  -ms-flex-item-align: center;
+      align-self: center;
+}
+.teams .teamsscale {
+  -webkit-transform: scale(0);
+          transform: scale(0);
+}
+
 @media (max-width: 576px) {
   nav .wrapper {
     padding: 0em 1em;
