--- a/sass/style.scss
+++ b/sass/style.scss
@@ -446,7 +446,7 @@ nav {
 
 // ---TEAMS---
 
-.teams {
+.sectionteams {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -457,7 +457,7 @@ nav {
 		align-items: center;
 		margin-bottom: 2em;
 		h1 {
-			font-size: 4rem;
+			font-size: 3.8rem;
 			text-align: left;
 		}
 		.line {
