--- a/css/style.css
+++ b/css/style.css
@@ -1336,4 +1336,18 @@ nav .wrapper .burger .hide {
   .sectionoffer .accordionbox {
     width: 70%;
   }
+  .sectionteams .teams__img {
+    width: 55%;
+  }
+  .sectionteams .teams__img img {
+    width: 100%;
+    height: 100%;
+    -o-object-fit: scale-down;
+       object-fit: scale-down;
+    -o-object-position: top;
+       object-position: top;
+  }
+  .sectionteams .teams__info {
+    width: 50%;
+  }
 }/*# sourceMappingURL=style.css.map */
