--- a/sass/_xxlarge.scss
+++ b/sass/_xxlarge.scss
@@ -102,4 +102,21 @@
 			width: 70%;
 		}
 	}
+
+	.sectionteams {
+		.teams {
+			&__img {
+				width: 55%;
+				img {
+					width: 100%;
+					height: 100%;
+					object-fit: scale-down;
+					object-position: top;
+				}
+			}
+			&__info {
+				width: 50%;
+			}
+		}
+	}
 }
