added all styles for section team

--- a/css/style.css
+++ b/css/style.css
@@ -791,11 +791,6 @@ nav .wrapper .burger .hide {
   -ms-flex-item-align: center;
       align-self: center;
 }
-.sectionteams .teamsscale {
-  width: 0%;
-  height: 0%;
-  visibility: hidden;
-}
 .sectionteams .swiper {
   position: relative;
   width: 100%;
@@ -864,8 +859,8 @@ nav .wrapper .burger .hide {
   position: absolute;
   left: -30%;
 }
-.sectionteams .swiperscale {
-  visibility: hidden;
+.sectionteams .swiperview {
+  display: none;
 }
 
 @media (max-width: 576px) {
@@ -1021,6 +1016,19 @@ nav .wrapper .burger .hide {
     width: 75%;
     margin-left: 5em;
   }
+  .sectionteams .swiper .card__text {
+    bottom: 8%;
+    width: 100%;
+    text-align: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    border-top-left-radius: 0em;
+  }
+  .sectionteams .swiper .swiper-pagination {
+    position: absolute;
+    left: 0%;
+  }
 }
 @media (min-width: 768px) {
   nav .navcontact {
@@ -1139,6 +1147,10 @@ nav .wrapper .burger .hide {
   .sectionoffer .infooffer__text {
     font-size: 2rem;
   }
+  .sectionteams .swiper {
+    width: 75%;
+    height: 100%;
+  }
 }
 @media (min-width: 992px) {
   nav .wrapper .logo a img {
@@ -1166,6 +1178,16 @@ nav .wrapper .burger .hide {
   }
   .sectionteams {
     padding: 8em 2em 2em 2em;
+  }
+  .sectionteams .swiper {
+    width: 100%;
+    height: 100%;
+  }
+  .sectionteams .swiper .card {
+    height: 95%;
+  }
+  .sectionteams .swiper .swiper-pagination {
+    left: 0%;
   }
 }
 @media (min-width: 1200px) {
@@ -1264,9 +1286,6 @@ nav .wrapper .burger .hide {
     font-size: 4.6rem;
   }
   .sectionteams .teams {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
@@ -1275,6 +1294,7 @@ nav .wrapper .burger .hide {
         -ms-flex-pack: justify;
             justify-content: space-between;
     height: 80%;
+    width: 85%;
   }
   .sectionteams .teams__img {
     height: 100%;
@@ -1415,5 +1435,8 @@ nav .wrapper .burger .hide {
   }
   .sectionteams .teams__info {
     width: 50%;
+  }
+  .sectionteams .swiper .card__text {
+    width: 47%;
   }
 }/*# sourceMappingURL=style.css.map */
