--- a/sass/_large.scss
+++ b/sass/_large.scss
@@ -46,5 +46,15 @@
 
 	.sectionteams {
 		padding: 8em 2em 2em 2em;
+		.swiper {
+			width: 100%;
+			height: 100%;
+			.card {
+				height: 95%;
+			}
+			.swiper-pagination {
+				left: 0%;
+			}
+		}
 	}
 }
