--- a/sass/_medium.scss
+++ b/sass/_medium.scss
@@ -128,6 +128,12 @@
 		}
 	}
 	.sectionteams {
+		padding: 8em 2em 2em 2em;
+		.heading {
+			h1 {
+				font-size: 4.2rem;
+			}
+		}
 		.swiper {
 			width: 75%;
 			height: 100%;
