--- a/sass/_small.scss
+++ b/sass/_small.scss
@@ -176,4 +176,27 @@
 			}
 		}
 	}
+
+	.sectionopinions {
+		.heading {
+			margin-bottom: 1.5em;
+			&__head {
+				font-size: 2.2rem;
+			}
+		}
+		.swiper {
+			width: 100%;
+			height: 300px;
+			.swiper-wrapper {
+				.cardopinion {
+					&__card {
+						height: 80%;
+						&--text {
+							z-index: 1;
+						}
+					}
+				}
+			}
+		}
+	}
 }
