--- a/sass/style.scss
+++ b/sass/style.scss
@@ -21,7 +21,7 @@
 	--color-mediumthree: #257ca3;
 	--color-darkone: #373b3e;
 	--color-dark: #000000;
-	--color-other: #9d1c5d;
+	--color-other: #8f102d;
 }
 
 html {
