--- a/sass/_medium.scss
+++ b/sass/_medium.scss
@@ -20,7 +20,7 @@
 			.navbar {
 				position: relative;
 				flex-direction: row;
-				width: 70%;
+				width: 90%;
 				height: 100%;
 				top: 0;
 				padding: 0;
@@ -137,6 +137,19 @@
 		.swiper {
 			width: 75%;
 			height: 100%;
+		}
+	}
+
+	.sectionopinions {
+		.heading {
+			margin-bottom: 1.5em;
+			&__head {
+				font-size: 4.2rem;
+			}
+		}
+		.swiper {
+			width: 100%;
+			height: 300px;
 		}
 	}
 }
